--- a/.env
+++ b/.env
@@ -1,2 +1,33 @@
 # index.tsx
-AMBASS_STORE_GATEWAY_URL=localhost:8300/api/ambassador
+AMBASS_STORE_GATEWAY_URL=localhost:8300/api/admin
+
+# ---
+
+# users endpoints 
+ADMIN_APP_GET_AMBASSADORS_ENDPOINT=/api/admin/ambassadors
+ADMIN_APP_GET_USER_LINKS_ENDPOINT=/api/admin/users/
+
+# register endpoint
+ADMIN_APP_REGISTER_ENDPOINT=/api/ambassador/register
+
+# profile endpoints
+ADMIN_APP_UPDATE_USER_INFO_ENDPOINT=/api/admin/users/info
+ADMIN_APP_UPDATE_USER_PASSWORD_ENDPOINT=/api/ambassador/users/password
+
+# orders endpoints
+ADMIN_APP_ORDERS_ENDPOINT=/api/admin/orders
+
+# login endpoints
+ADMIN_APP_LOGIN_ENDPOINT=/api/admin/login
+
+# links endpoints
+ADMIN_APP_GET_USER_LINKS_ENDPOINT=/api/admin/users/
+
+# products.tsx
+ADMIN_APP_GET_PRODUCTS_ENDPOINT=/api/admin/products
+
+# product Form .tsx
+ADMIN_APP_CREATE_PRODUCT_ENDPOINT=/api/admin/products/
+ADMIN_APP_UPDATE_PRODUCT_ENDPOINT=/api/admin/products/
+
+
