--- a/.env
+++ b/.env
@@ -30,4 +30,9 @@ ADMIN_APP_GET_PRODUCTS_ENDPOINT=/api/admin/products
 ADMIN_APP_CREATE_PRODUCT_ENDPOINT=/api/admin/products/
 ADMIN_APP_UPDATE_PRODUCT_ENDPOINT=/api/admin/products/
 
+# endpoint Layout.tsx
+ADMIN_APP_USER_ENDPOINT=/api/ambassador/user
+
+# endpoint Nav.tsx
+ADMIN_APP_LOGOUT_ENDPOINT=/api/ambassador/logout
 
