--- a/manifests/test/admin-web-app-http-proxy-admin.yaml
+++ b/manifests/test/admin-web-app-http-proxy-admin.yaml
@@ -6,6 +6,8 @@ metadata:
 spec:
   virtualhost:
     fqdn: admin.ambassadors.ink
+    tls:
+      secretName: admin-ambassador-tls
   routes:
     - conditions:
       - prefix: /
